--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Assessment 1: My Profile</title>
 <style>
 body {
   background-color: black;
@@ -13,8 +13,18 @@ body {
 <body>
 
 <h1>This is a Heading</h1>
+  
 <p>This is a paragraph.</p>
-<img src="IMG_0332.JPG" alt="Avatar" style="width:200px">
+  
+  <img src="IMG_0332.JPG" alt="Avatar" style="width:200px">
+  
+  <p>This is a paragraph.</p>
+  
+  <p>This is a paragraph.</p>
+  
+  <p>This is a paragraph.</p>
+  
+
 
 </body>
 </html>
