--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ body {
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Introduction to Information Technology</h1>
+<h2>Personal Information</h2>
   
 <p>This is a paragraph.</p>
   
