--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 <h1>Introduction to Information Technology</h1>
 <h2>Personal Information</h2>
   
-<p>This is a paragraph.</p>
+<p>Github: https://s3905546.github.io/COSC2196/index.html</p>
   
   <img src="IMG_0332.JPG" alt="Avatar" style="width:200px">
   
