--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@ body {
 <h2>Personal Information</h2>
   
 <p>Github: https://s3905546.github.io/COSC2196/index.html</p>
-  
+<p>Name: Joeffrey CUMMINGS</p>
+<p>Student Number: s3905546</p>
+<p>Student Email Address: s3905546@student.rmit.edu.au</p>
+ 
+<p>I am Filipino heritage and having grown up in Sydney, Australia for most of life since the age of six. I can still understand and have some average level language competency in Tagalog and have a strong understanding of the Korean language as I am married to a Korean wife who communicates with our son in her mother tongue.</p>
+  <p>I have completed a Diploma in Information Technology, and was an undergraduate of Bachelor of Science, Information Technology but was not able to complete my studies due to focusing on my career, that was over 20 years ago.</p>
+  <p>What do I do outside of work? I used to be an avid paddler, paddling and coaching in the sports of dragon boat and have since taken up the sport of outrigger canoe. The heart racing part of outrigger canoe is when you are out in the open waters and your boat tips over and it would take you a good 30 to 45 minutes to tip your boat back, empty the water whilst watching for huge surfs or even sharks, this is quite common in the northern beaches of Sydney.</p>
+  <p>When I am not in the water I do enjoy playing a lot of different sports from golf where I get coached to having fun in the ten pin bowling alleys.</p>
+
   <img src="IMG_0332.JPG" alt="Avatar" style="width:200px">
   
   <p>This is a paragraph.</p>
