--- a/index.html
+++ b/index.html
@@ -27,13 +27,25 @@ body {
 
   <img src="IMG_0332.JPG" alt="Avatar" style="width:200px">
   
-  <p>This is a paragraph.</p>
   
-  <p>This is a paragraph.</p>
+  <h2>Interest in IT</h2>
   
-  <p>This is a paragraph.</p>
   
-
+  <p>I did not get into Information Technology (IT) initially because of personal interest, it came about due to my starting my Diploma in Electrical Engineering where I got exposed to computer related topics such as programming. This then led to my start of interest in IT, I found the challenge and personal satisfaction in programming code to come out with an outcome. At the time, my interest sparked when I was creating a simple calculator in the language of Visual Basics.</p>
+  
+  <p>Since then, I have been in the field of IT for about 25 years. I joined as a technical phone analyst, when then lead me to joining a large Global Systems Integrator (GSI) performing a similar role supporting their enterprise customers. A year later, I moved to desktop support performing break/fix services to client, I was fortunate enough to move up as technical consulting then was relocated to Japan for 2 years as contract performing IT Management for the region. </p>
+  
+  <p>Two years later, I returned and joined as midrange engineer, soon after became the team leader then regional manager for eastern Australia for 3 years. I then moved into a solution architect role for 8 years before relocating to Singapore and worked on large complex deals, deal sizes where I was the Solution Executive ranged from $40M to over $1B. I have won large contracts from BHP Billiton, Rio Tinto, AMP to Asia based accounts in Hong Kong, Singapore and Japan. </p>
+  
+  <p>After nearly 11 years in pre-sales / solution architecture roles I was promoted to run the solution architecture business unit for ASEAN. I then pivoted to Director of Alliances for a magic quadrant leader in all-flash storage then now moved to a cybersecurity company running the partnership with the large GSIs including PwC, Deloitte, EY, Accenture and many more.</p>
+  <p>The reason I selected RMIT out of all the available was that I felt it had the best balanced with its strength and high ranking in reducing inequalities. I am also following the university academic ranking and found it is having a good move up the ladder. Personally, I was always curious of what RMIT can offer so here I am in semester one doing the best I can to succeed not only in this course but learn as much as I can from the RMIT professionals.</p>
+  <p>By enrolling in this course, I aim to learn and excel in the field of Industry 4.0 where I can step up my learnings in blockchain, Artificial Intelligence (AI) and more importantly in the field of cybersecurity. Hopefully during my journey in doing the program of work I can also meet interesting students, teachers and future innovators. </p>
+  
+  <h2>Interest in IT</h2>
+  <h2>Interest in IT</h2>
+  <h2>Interest in IT</h2>
+  
+  
 
 </body>
 </html>
