--- a/index.html
+++ b/index.html
@@ -41,9 +41,33 @@ body {
   <p>The reason I selected RMIT out of all the available was that I felt it had the best balanced with its strength and high ranking in reducing inequalities. I am also following the university academic ranking and found it is having a good move up the ladder. Personally, I was always curious of what RMIT can offer so here I am in semester one doing the best I can to succeed not only in this course but learn as much as I can from the RMIT professionals.</p>
   <p>By enrolling in this course, I aim to learn and excel in the field of Industry 4.0 where I can step up my learnings in blockchain, Artificial Intelligence (AI) and more importantly in the field of cybersecurity. Hopefully during my journey in doing the program of work I can also meet interesting students, teachers and future innovators. </p>
   
-  <h2>Interest in IT</h2>
-  <h2>Interest in IT</h2>
-  <h2>Interest in IT</h2>
+  <h2>Ideal Job</h2>
+  <h2>Learning Styles</h2>
+     <h3>#1 16Personalitiies.com</h3>
+  <p>Website: https://www.16personalities.com/</p>
+    <img src="Picture1.PNG" alt="Avatar" style="width:200px">
+     <h3>Motivation</h3>
+  <p>Name: Joeffrey CUMMINGS</p>
+     <h3>Motivation</h3>
+  <p>Name: Joeffrey CUMMINGS</p>
+     <h3>Motivation</h3>
+  <p>Name: Joeffrey CUMMINGS</p>
+  
+  <h2>Project</h2>
+  
+   <h3>Project Overview</h3>
+  
+   <h3>Motivation</h3>
+  
+   <h3>Solution Overview</h3>
+  
+   <h3>Tools </h3>
+  
+   <h3>Skills</h3>
+  
+   <h3>Conclusion</h3>
+  <p>Based on the above building block of creating a data hub with relevant data telemetry gathered from a global network of sources, I believe this can help children and adults suffer from stuttering. If the experiment or project is successful, we would expect the government to help fund some of the research and development of both the applications and the IoT devices. </p>
+  <p>Children or adults wearing these IoT devices powered by the global network, both feeding data and receiving data to help synchronise both the neurological and speech motor skills.</p>
   
   
 
