--- a/index.html
+++ b/index.html
@@ -46,9 +46,19 @@ body {
      <h3>#1 16Personalitiies.com</h3>
   <p>Website: https://www.16personalities.com/</p>
     <img src="Picture1.PNG" alt="Avatar" style="width:200px">
-     <h3>Motivation</h3>
-  <p>Name: Joeffrey CUMMINGS</p>
-     <h3>Motivation</h3>
+     <h3>#2 How-to-study.com</h3>
+  <p>Website: https://www.how-to-study.com/learning-style-assessment</p>
+  <p>Results: https://www.how-to-study.com/study-skills-articles/visual-learner.asp</p>
+  <p>Learning Style Assessment</p>
+  
+  <p>Your preferred learning style is the way in which you learn best. Three learning styles that are often identified in students are:</p>
+ <p>•	Auditory
+•	Visual
+•	Tactile/kinesthetics
+</p>
+  
+  
+  <h3>#3 Truity.com</h3>
   <p>Name: Joeffrey CUMMINGS</p>
      <h3>Motivation</h3>
   <p>Name: Joeffrey CUMMINGS</p>
