--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
   <h2>Learning Styles</h2>
      <h3>#1 16Personalitiies.com</h3>
   <p>Website: https://www.16personalities.com/</p>
-    <img src="Picture1.PNG" alt="Avatar" style="width:200px">
+    <img src="Picture1.PNG" style="width:200px">
      <h3>#2 How-to-study.com</h3>
   <p>Website: https://www.how-to-study.com/learning-style-assessment</p>
   <p>Results: https://www.how-to-study.com/study-skills-articles/visual-learner.asp</p>
