--- a/index.html
+++ b/index.html
@@ -59,21 +59,45 @@ body {
   
   
   <h3>#3 Truity.com</h3>
-  <p>Name: Joeffrey CUMMINGS</p>
-     <h3>Motivation</h3>
-  <p>Name: Joeffrey CUMMINGS</p>
+  <p>Website: https://www.truity.com</p>
+    <p>Results: https://www.truity.com/personality-test/211/result/13348347</p>
+    <p>The different personality test gave different answers and outcome, I was not aware that 16Personalities and Truity.com were using the same algorithm but surprise to see the results differed as they were taken a week apart from each other. The how-to-study test was a little simpler as it measured results in three classifications only, I came out as more Visual as opposed to Auditory or Tactile.</p>
+    <p>The test and results I feel is important as this will help understand team dynamics and how to work in cohesion. I am more suited to work with people that needs leadership and I am eager to coach and mentor and would even look for mentees. By cross checking profiles between team members this will help or avoid conflict caused by direct or indirect actions.</p>
+    <p>The studies are important to form a team as the people would know the personality type of each individual before they even meet. This will allow prior understanding on how to treat and interact with each other before they even meet. During the collaboration period this will also allow members to better understand each workstyle and hopefully lean on each other’s strengths to come with a strong collaboration and pieces of work.</p>
+ 
   
   <h2>Project</h2>
   
    <h3>Project Overview</h3>
   
+    <p>Name: Joeffrey CUMMINGS</p>
+  
    <h3>Motivation</h3>
+  
+    <p>My motivation for this project is personal, as I went through the stage of stuttering for a more extended period than most children. There was a stage where I would have to replace words that my speech cannot let out with more straightforward terms, which I think prohibited my vocabulary.</p>
+    <p>As I have history and have managed to overcome the challenges of stuttering, I feel that I can share my learnings and how I overcame the issue and the many solutions I have used to bypass, cheat and beat the problem.</p>
+    <p>About 5% of children between the age of 2 to 5 suffer from stuttering, some recovering by the age of 7 or 8, and for the less fortunate, that could last much longer and at times the rest of their lives. (The Stuttering Foundation and Frank Wolf. "Stuttering Gets Congress' Attention." Summer 2014 Newsletter. http://www.stutteringhelp.org/content/stuttering-gets-congress%E2%80%99-attention (accessed Nov 12, 2014).</p>
   
    <h3>Solution Overview</h3>
   
+    <p>With data from different sources historical from past studies, personal then added with new data telemetry using facial images from children's retina, heartbeat data so other Internet of Things (IoT) devices we might be able to fast track a solution and help children at an early age with the correct prescription.</p>
+    <p>At the core of this platform will be a data hub where data from many global sources will be gathered and correlated with seeing if patterns exist in people who stutter. Data collected should not have personal information of recipients but instead symptoms and medical data such as age, blood type, retina images, neuroimages, environmental.</p>
+    <p>"In the Data Integration Hub, often referred to as a Data Hub, data is taken from disparate sources to create a unified view of data. When you hear "customer 360," or a 360-degree view of some entity, people are often referring to a Data Integration Hub." (Types of Data Hub Patterns, Pete Aven, 2019)</p>
+    <p>We would need an application that is easily accessible by the public, so it cannot be premium; hence the other recommendation of crowdsourcing the development of the code with the data scientist who may already have experience in something similar in the medical, pharmaceutical and life science industry.</p>
+    <p>With the upcoming introduction of IoT in our lives, children under consultation may be provided with a device that can gather information in real-time, then transferred to a secure data hub supplied by a trusted service provider. This data hub can then be accessed by several types of institutions from speech therapist, medical organisations to help provide a more stable source of truth to help find the right or safe recommendations for those children to practice on.</p>
+    <p>A sample scenario of a potential prototype is for the IoT device to give a pulse-like effect to the wearer or the device to help calm them down and let them know how to let them flow of speech come out. Another potential could be an earpiece that they could wear, releasing a sound to calm their heartbeat and speak slower, allowing them to release the words.</p>
+    <p>From my personal experience, I found by slowing down, and breathing helps my speech motor skills catch up with my brain. This then allows me to control what I say in a much-controlled manner. Most stutterers sometimes lose control, and the brain is going much faster than their speech can process. Having a reminder or a signal lets the person know to slow down or calm their heartbeat or other potential control that can help them release the words.</p>
+  
+  
    <h3>Tools </h3>
   
+    <p>The data hub would require a platform accessible by a global network from the infrastructure level, so an initial recommendation to be hosted on the Cloud. Since data telemetry requires low latency, the advice would be GPU processing and nanosecond latency of storage. As current Public Cloud providers cannot perform such performance, the investment would be via Cloud Fabric. High performance compute and storage is hosted at a Public Cloud Data Centre leveraging cloud fabric technology.</p>
+    <p>Application-wise, we would need an application that can go through millions of images to find patterns similar to fingerprint matching. Instead of just images, we would also include the inputs mentioned earlier. </p>
+  
    <h3>Skills</h3>
+  
+    <p>Technologies required would be ideally data scientist in the IT industry. Those with healthcare and life science domain knowledge would be ideal as they would have the experience to shorten the discovery and gap findings. The skillset is not very common, so it would be a challenge to find them, and if they are found, they do come with a premium price. </p>
+    <p>The running of infrastructure will not be tough as hardware these days are turn-key but would still require skill sets who have a strong understanding of the GPU's power and high performing low-latency infrastructure. </p>
   
    <h3>Conclusion</h3>
   <p>Based on the above building block of creating a data hub with relevant data telemetry gathered from a global network of sources, I believe this can help children and adults suffer from stuttering. If the experiment or project is successful, we would expect the government to help fund some of the research and development of both the applications and the IoT devices. </p>
