--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
   
    <h3>Project Overview</h3>
   
-    <p>Name: Joeffrey CUMMINGS</p>
+    <p>The project that I would like to explore is in Artificial Intelligence / Machine Learning, where an application to determine the psychology of children at a young age who suffers from dysphemia (or stuttering) and performing enough analysis and determination to provide a recommendation. Based on data already gathered from a global network of speech therapists, we would determine the best guidance or treatment that can be applied at home. Using enough data telemetry, patterns or similar scenarios where a past case has gone through equal but, more importantly, successful treatment.</p>
   
    <h3>Motivation</h3>
   
