--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
 <title>Assessment 1: My Profile</title>
 <style>
 body {
@@ -13,8 +14,10 @@ body {
 <body>
 
 <h1>Introduction to Information Technology</h1>
-<h2>Personal Information</h2>
-  
+  text-align: justify;
+  <h2>Personal Information</h2>
+ 
+    text-align: justify;
 <p>Github: https://s3905546.github.io/COSC2196/index.html</p>
 <p>Name: Joeffrey CUMMINGS</p>
 <p>Student Number: s3905546</p>
