--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
   
+<head>
+
 <title>Assessment 1: My Profile</title>
 <style>
 body {
   background-color: black;
-  text-align: center;
+  text-align: left;
   color: white;
 }
 </style>
@@ -14,7 +15,7 @@ body {
 <body>
 
 <h1>Introduction to Information Technology</h1>
-  text-align: justify;
+
   <h2>Personal Information</h2>
  
     text-align: justify;
