--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {
   background-color: black;
   text-align: left;
   color: white;
+  font-family: 'proxima-nova', sans-serif;
 }
 </style>
 </head>
