--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@ body {
   <p>Website: https://www.16personalities.com/</p>
     <img src="16Personalities.jpg" style="width:400px">
      <h3>#2 How-to-study.com</h3>
-  <p>Website: https://www.how-to-study.com/learning-style-assessment</p>
-  <p>Results: https://www.how-to-study.com/study-skills-articles/visual-learner.asp</p>
+  <p><a href="https://www.how-to-study.com/learning-style-assessment"> Website: https://www.how-to-study.com/learning-style-assessment
+  </a></p>
+  
+  <p><a href="https://www.how-to-study.com/study-skills-articles/visual-learner.asp"> Results: https://www.how-to-study.com/study-skills-articles/visual-learner.asp
+  </a></p>
   <p>Learning Style Assessment</p>
   
   <p>Your preferred learning style is the way in which you learn best. Three learning styles that are often identified in students are:</p>
