--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ body {
   <h2>Ideal Job</h2>
   <h2>Learning Styles</h2>
      <h3>#1 16Personalitiies.com</h3>
-  <p>Website: https://www.16personalities.com/</p>
+  <p>a href="Website: https://www.16personalities.com/">Website: https://www.16personalities.com/
+  </a>W/p>
     <img src="16Personalities.jpg" style="width:400px">
      <h3>#2 How-to-study.com</h3>
   <p><a href="https://www.how-to-study.com/learning-style-assessment"> Website: https://www.how-to-study.com/learning-style-assessment
@@ -67,8 +68,10 @@ body {
   
   
   <h3>#3 Truity.com</h3>
-  <p>Website: https://www.truity.com</p>
-    <p>Results: https://www.truity.com/personality-test/211/result/13348347</p>
+  <p><a href="Website: https://www.truity.com">Website: https://www.truity.com
+  </a></p>
+    <p>a href="https://www.truity.com/personality-test/211/result/13348347">Results: https://www.truity.com/personality-test/211/result/13348347
+  </a></p>
     <p>The different personality test gave different answers and outcome, I was not aware that 16Personalities and Truity.com were using the same algorithm but surprise to see the results differed as they were taken a week apart from each other. The how-to-study test was a little simpler as it measured results in three classifications only, I came out as more Visual as opposed to Auditory or Tactile.</p>
     <p>The test and results I feel is important as this will help understand team dynamics and how to work in cohesion. I am more suited to work with people that needs leadership and I am eager to coach and mentor and would even look for mentees. By cross checking profiles between team members this will help or avoid conflict caused by direct or indirect actions.</p>
     <p>The studies are important to form a team as the people would know the personality type of each individual before they even meet. This will allow prior understanding on how to treat and interact with each other before they even meet. During the collaboration period this will also allow members to better understand each workstyle and hopefully lean on each other’s strengths to come with a strong collaboration and pieces of work.</p>
