--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@ body {
   
   
   <h3>#3 Truity.com</h3>
-  <p><a href="Website: https://www.truity.com">Website: https://www.truity.com
-  </a></p>
-    <p>a href="https://www.truity.com/personality-test/211/result/13348347">Results: https://www.truity.com/personality-test/211/result/13348347
+  <p><a href="Website: https://www.truity.com">Website: https://www.truity.com</a></p>
+    <p><a href="https://www.truity.com/personality-test/211/result/13348347">Results: https://www.truity.com/personality-test/211/result/13348347
   </a></p>
     <p>The different personality test gave different answers and outcome, I was not aware that 16Personalities and Truity.com were using the same algorithm but surprise to see the results differed as they were taken a week apart from each other. The how-to-study test was a little simpler as it measured results in three classifications only, I came out as more Visual as opposed to Auditory or Tactile.</p>
     <p>The test and results I feel is important as this will help understand team dynamics and how to work in cohesion. I am more suited to work with people that needs leadership and I am eager to coach and mentor and would even look for mentees. By cross checking profiles between team members this will help or avoid conflict caused by direct or indirect actions.</p>
