--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body {
 <body>
 
 <h1>Introduction to Information Technology</h1>
+<h1>Assessment 1: My Profile</h1>
 
   <h2>Personal Information</h2>
  
