--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
   <h2>Ideal Job</h2>
   <h2>Learning Styles</h2>
      <h3>#1 16Personalitiies.com</h3>
-  <p>a href="Website: https://www.16personalities.com/">Website: https://www.16personalities.com/
+  <p><a href="Website: https://www.16personalities.com/">Website: https://www.16personalities.com/
   </a></p>
     <img src="16Personalities.jpg" style="width:400px">
      <h3>#2 How-to-study.com</h3>
@@ -87,7 +87,7 @@ body {
   
     <p>My motivation for this project is personal, as I went through the stage of stuttering for a more extended period than most children. There was a stage where I would have to replace words that my speech cannot let out with more straightforward terms, which I think prohibited my vocabulary.</p>
     <p>As I have history and have managed to overcome the challenges of stuttering, I feel that I can share my learnings and how I overcame the issue and the many solutions I have used to bypass, cheat and beat the problem.</p>
-    <p>About 5% of children between the age of 2 to 5 suffer from stuttering, some recovering by the age of 7 or 8, and for the less fortunate, that could last much longer and at times the rest of their lives. (The Stuttering Foundation and Frank Wolf. "Stuttering Gets Congress' Attention." Summer 2014 Newsletter. http://www.stutteringhelp.org/content/stuttering-gets-congress%E2%80%99-attention (accessed Nov 12, 2014).</p>
+    <p>About 5% of children between the age of 2 to 5 suffer from stuttering, some recovering by the age of 7 or 8, and for the less fortunate, that could last much longer and at times the rest of their lives. (The Stuttering Foundation and Frank Wolf. "Stuttering Gets Congress' Attention." Summer 2014 Newsletter. http://www.stutteringhelp.org (accessed Nov 12, 2014).</p>
   
    <h3>Solution Overview</h3>
   
