--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@ body {
   <p>Learning Style Assessment</p>
   
   <p>Your preferred learning style is the way in which you learn best. Three learning styles that are often identified in students are:</p>
- <p>•	Auditory
-•	Visual
-•	Tactile/kinesthetics
+ <p>
+   <ul>
+  <li>Auditory</li>
+  <li>Visual</li>
+  <li>Tactile/kinesthetics</li>
+</ul>
 </p>
   
   
