--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
   <p>What do I do outside of work? I used to be an avid paddler, paddling and coaching in the sports of dragon boat and have since taken up the sport of outrigger canoe. The heart racing part of outrigger canoe is when you are out in the open waters and your boat tips over and it would take you a good 30 to 45 minutes to tip your boat back, empty the water whilst watching for huge surfs or even sharks, this is quite common in the northern beaches of Sydney.</p>
   <p>When I am not in the water I do enjoy playing a lot of different sports from golf where I get coached to having fun in the ten pin bowling alleys.</p>
 
-  <img src="IMG_0332.JPG" alt="Avatar" style="width:400px">
+  <img src="IMG_0332.JPG" alt="Avatar" style="width:600px">
   
   
   <h2>Interest in IT</h2>
@@ -48,10 +48,27 @@ body {
   <p>By enrolling in this course, I aim to learn and excel in the field of Industry 4.0 where I can step up my learnings in blockchain, Artificial Intelligence (AI) and more importantly in the field of cybersecurity. Hopefully during my journey in doing the program of work I can also meet interesting students, teachers and future innovators. </p>
   
   <h2>Ideal Job</h2>
+       <h3>Director - Technology Strategy & Transformation</h3>
+  <p><a href="https://www.linkedin.com/jobs/view/2419649958/">https://www.linkedin.com/jobs/view/2419649958/</a></p>
+     <img src="IdealJob.jpg" style="width:600px">
+  <p>This role is a though leader who can lead the organisation in becoming the differentiator in next generation services. The services include future proofing their customers and at the same time bring operational efficiencies whilst leveraging on trending architecture such as Public Cloud, IT Operation Management and helping clients achieve their business outcome by improving their time to market. </p>
+  <p>The role includes from advisory and consultation to creation of blueprints and roadmap and eventually helping clients execute to bring into reality. Role also includes working with strategic partners, industry point of view and coaching through to delivery team.</p>
+  <p>Skills required would have to contain, background in solution design / architecture, creating and execution of Go-To-Market (GTM) offerings and campaigns within the IT ecosystem. Private / Public and Hybrid Cloud strengths would be ideal with next generation IT services exposure.
+Leadership skill is a must with strong competency in facing off CxO level in boardroom environment and the ability to articulate solution strategies to business language. 
+</p>
+  <p>I feel I have some if not most of the skills required as I have over 25 years of experience with 13 years in the solution architecture domain, leading complex deals to managing large teams of more than 100 solution architects within the ASEAN region for a large GSI. My background also includes history in creation of global offerings partnered with strategies partners, from traditional infrastructure to private and public cloud, software as a service (SaaS) to Enterprise Service Management.</p>
+   <p>My role over the last 10 years has exposed me to present proposals and recommendations to CxO level audience and board members to eventually win competitive deals.</p>
+   <p>My plan is to complete my Bachelor of Information Technology and eventually start a Master of Business Administration (MBA) so that I can face off similar candidates. I have the industry experience and can articulate and eloquently deliver the message but feel educational background plays a big part in being selected for the role. </p>
+     <p>Whilst I maintain relevant industry qualifications such as Public Cloud, Enterprise Service Management, Workplace services and more recently cyber security field of studies.</p>
+     <p>Aside from the above I will continue to present and deliver innovative presentations to large enterprises and systems integrators to build my reputation as a thought leader in the industry.</p>
+  
+  
+  
   <h2>Learning Styles</h2>
      <h3>#1 16Personalitiies.com</h3>
-  <p><a href="Website: https://www.16personalities.com/">Website: https://www.16personalities.com/
-  </a></p>
+  <p><a href="https://www.16personalities.com/">Website: https://www.16personalities.com/</a></p>
+  
+  
     <img src="16Personalities.jpg" style="width:400px">
      <h3>#2 How-to-study.com</h3>
   <p><a href="https://www.how-to-study.com/learning-style-assessment"> Website: https://www.how-to-study.com/learning-style-assessment
