--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
   <h2>Ideal Job</h2>
        <h3>Director - Technology Strategy & Transformation</h3>
   <p><a href="https://www.linkedin.com/jobs/view/2419649958/">https://www.linkedin.com/jobs/view/2419649958/</a></p>
-     <img src="IdealJob.png" style="width:300px">
+     <img src="IdealJob.jpg" style="width:300px">
   <p>This role is a though leader who can lead the organisation in becoming the differentiator in next generation services. The services include future proofing their customers and at the same time bring operational efficiencies whilst leveraging on trending architecture such as Public Cloud, IT Operation Management and helping clients achieve their business outcome by improving their time to market. </p>
   <p>The role includes from advisory and consultation to creation of blueprints and roadmap and eventually helping clients execute to bring into reality. Role also includes working with strategic partners, industry point of view and coaching through to delivery team.</p>
   <p>Skills required would have to contain, background in solution design / architecture, creating and execution of Go-To-Market (GTM) offerings and campaigns within the IT ecosystem. Private / Public and Hybrid Cloud strengths would be ideal with next generation IT services exposure.
