--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
   background-color: black;
   text-align: left;
-  word-break: break-all;
+  word-wrap: normal;
   color: white;
   font-family: 'proxima-nova', sans-serif;
 }
