--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ body {
 
   <h2>Personal Information</h2>
  
-<p><a href="Github: https://s3905546.github.io/COSC2196/index.html">Github: https://s3905546.github.io/COSC2196/index.html
-  </a></p>
+<p>Github: https://s3905546.github.io/COSC2196/index.html
+  </p>
 <p>Name: Joeffrey CUMMINGS</p>
 <p>Student Number: s3905546</p>
 <p>Student Email Address: s3905546@student.rmit.edu.au</p>
